# mamsys-V.1

./: .env.example  .gitignore  CHANGELOG.md  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  apps.py  managers.py  models.py
apps/budget_analysis/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/budgets/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/companies/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  models.py  pdf.py  urls.py  views.py
apps/currencies/: __init__.py  admin.py  apps.py  models.py
apps/imports/: __init__.py  admin.py  apps.py  base.py  importers.py  models.py  urls.py  views.py
apps/organizations/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/payroll/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/permissions/: admin.py  apps.py  checks.py  constants.py  decorators.py  models.py  services.py
apps/pricing/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/procurement/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/projects/: admin.py  (+5 more)
docs/: SPEC.md  STATUS.md
mamsys/: asgi.py  celery.py  urls.py  urls_public.py  wsgi.py
requirements/: base.txt  dev.txt  prod.txt
templates/: auth_base.html  base.html
(+155 files in other folders)
