[project]
name = "mamsys"
version = "0.1.0"
description = "SaaS multi-tenant para constructoras pyme argentinas"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DJ", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/settings/*" = ["F401", "F403", "F405"]
"**/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mamsys.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers --reuse-db"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/admin.py", "*/apps.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
